# CMASM

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  cmasm.sln  cmasm.vcxproj  cmasm_shared.vcxproj  cmasm_shared.vcxproj.filters  interp.txt  libaries.md  test.masm
.cache/clangd/index/: cpu.cpp.00D55BF4C4B6F5F3.idx  cpu.h.47F008D4EEF34EBD.idx  cpu_wrapper.cpp.C105D58F3B1DB93E.idx  errors.h.4927C3C27A3FFB1A.idx  extmain.c.2048A182CE946A92.idx  gui.cpp.68AB29F857526F94.idx  helper.cpp.90BF944F8DCEF577.idx  instruction.c.DA6E8CAF3942C72C.idx  instruction.h.B652D69F3DE05301.idx  mni.h.F549CFCE52F48978.idx  parser.c.A2057BBB2F32B49A.idx  utils.h.F0DA097D666A9805.idx
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
cmasm.dir/Debug/: cmasm.exe.recipe  cmasm.ilk
cmasm.dir/Debug/cmasm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cmasm_shared.dir/Debug/: cmasm_shared.dll.recipe  cmasm_shared.ilk
cmasm_shared.dir/Debug/cmasm_shared.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/stdio/: print.masm
src/c/: extmain.c  instruction.c  parser.c
src/cpp/: cpu.cpp  cpu_wrapper.cpp  helper.cpp
src/h/: cpu.h  errors.h  instruction.h  utils.h
src/headers/: mni.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+3 more)
